WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152887
[B3] Fix control reaches end of non-void function GCC warnings on Linux
https://bugs.webkit.org/show_bug.cgi?id=152887
Summary
[B3] Fix control reaches end of non-void function GCC warnings on Linux
Csaba Osztrogonác
Reported
2016-01-08 05:30:26 PST
One example: ../../Source/JavaScriptCore/b3/B3Type.h: In function 'size_t JSC::B3::sizeofType(JSC::B3::Type)': ../../Source/JavaScriptCore/b3/B3Type.h:71:1: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors See the following bug reports for details: -
bug150794
-
bug150842
There are many places where this warning hit in B3. It is clear that it isn't a false warning, we should assert to avoid undefined behaviour. At least in debug not to make the compiler to emit extra codes in hot paths.
Attachments
Patch
(10.59 KB, patch)
2016-01-08 06:25 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-01-08 06:25:56 PST
Created
attachment 268540
[details]
Patch
Mark Lam
Comment 2
2016-01-08 08:32:37 PST
Comment on
attachment 268540
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-01-11 10:13:52 PST
Comment on
attachment 268540
[details]
Patch Clearing flags on attachment: 268540 Committed
r194858
: <
http://trac.webkit.org/changeset/194858
>
WebKit Commit Bot
Comment 4
2016-01-11 10:13:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug